syntax = "proto3";

package user;

option go_package = "./pb";

service UserService {
  rpc CreateUser ( CreateUserRequest ) returns ( User );
  rpc GetUser ( GetUserRequest ) returns ( User );
  rpc UpdateUser ( UpdateUserRequest ) returns ( User );
  rpc DeleteUser ( DeleteUserRequest ) returns ( Empty );
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message Empty {
}

